# Paroligilo

./: .gitmodules  README.md  im.bernard.Paroligilo.json  meson.build  probe.py  python-deps.json  python3-flatpak-requirements.json  python3-requirements.json  requirements.txt  unsaved file 1  unsaved file 2  voxpopuli.patch
data/: im.bernard.Paroligilo.desktop.in  im.bernard.Paroligilo.gschema.xml  im.bernard.Paroligilo.metainfo.xml.in  meson.build
data/icons/: meson.build
data/voices/: meson.build
po/: POTFILES  meson.build
src/: main.py  meson.build  myvoxpopuli.py  paroligilo.gresource.xml  paroligilo.in  window.py  window.ui
src/gtk/: help-overlay.ui
voxpopuli/: __init__.py  main.py  meson.build
